<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_file"
        android:title="@string/action_file"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_file_create"
                android:title="@string/action_file_create"/>
            <item
                android:id="@+id/action_file_open"
                android:title="@string/action_file_open"/>
            <item
                android:id="@+id/action_file_save"
                android:title="@string/action_file_save"/>
            <item
                android:id="@+id/action_file_save_as"
                android:title="@string/action_file_save_as"/>
            <item
                android:id="@+id/action_file_reload"
                android:title="@string/action_file_reload"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_test"
        android:title="TEST"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/action_file_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:title="@string/action_quit"
        app:showAsAction="never" />
</menu>