<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_folder_open"
        android:title="@string/open_world_custom_path"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/activity_nbt_editor"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_create"
        android:title="@string/action_create"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <!--item
        android:id="@+id/action_changelog"
        android:orderInCategory="100"
        android:title="@string/action_changelog"
        app:showAsAction="never" /-->
</menu>
