<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/create_world_title"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/help_frame_layers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_world_name"
                app:placeholderText="@string/world_default_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_world_biome_id" />

            <include
                android:id="@+id/biome_view"
                layout="@layout/include_biome_disp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_world_version" />

            <RadioGroup
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/version_aqua"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/version_aqua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_world_version_aqua" />

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/help_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_help"
                android:text="@string/create_world_layers" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/frag_layers"
                android:name="com.mithrilmania.blocktopograph.flat.EditFlatFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_need_restart" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.FloatingActionButton.Surface"
        android:id="@+id/fab_create"
        android:src="@drawable/ic_arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_floating_margin"
        app:layout_anchor="@id/scroll"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/open" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>