<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_test_page"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small_content_padding"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:id="@+id/key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_action_search"
                app:endIconMode="custom"
                android:hint="@string/world_test_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_content_padding"
                android:text="@string/world_test_key_type"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:id="@+id/type">

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/plain_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/world_test_key_type_plain" />

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/hex_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/world_test_key_type_hex" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingtoolbar.FloatingToolbarLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_dodgeInsetEdges="bottom"
        style="@style/Widget.Material3.FloatingToolbar">

        <com.google.android.material.button.MaterialButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/small_content_padding"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/world_test_fix"
                style="@style/Widget.Material3.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/world_test_query"
                style="@style/Widget.Material3.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/world_test_export"
                style="@style/Widget.Material3.Button.OutlinedButton" />
        </com.google.android.material.button.MaterialButtonGroup>
    </com.google.android.material.floatingtoolbar.FloatingToolbarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>